Fix - Spacing issue of repeater field

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -5924,3 +5924,6 @@ img.ui-datepicker-trigger {
 		width: 90% !important;
 	}
 }
+.evf-repeater-fields {
+	padding: 20px;
+}
